Unset memory limit for QImageReader

BUG: 492503